Fix my scrollbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -98,3 +98,11 @@ h4.season-nav {
     margin-left: 5px;
     margin-right: 5px;
 }
+
+.dark-scrollbar::-webkit-scrollbar {
+    width: 14px;
+}
+
+.dark-scrollbar::-webkit-scrollbar-track {
+    background-color: inherit;
+}
